--- a/articleManager/loginORreg/templates/setting.html
+++ b/articleManager/loginORreg/templates/setting.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html">
     <meta name = "viewport" content="width = device-width,initial-scale = 1">
+	<link rel="stylesheet" href="/static/kindeditor-4.1.10/themes/default/default.css"/>
+    <script charset="utf-8" src="/static/kindeditor-4.1.10/kindeditor-min.js"></script>
+    <script charset="utf-8" src="/static/kindeditor-4.1.10//lang/zh_CN.js"></script>
+	<script type="text/javascript" src="/static/js/shCore.js"></script>
 	<link rel = "stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css" media="screen" type="text/css" />
     <script src="/static/js/jquery-1.9.1.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+	<script type="text/javascript">
+        var editor;
+
+        KindEditor.ready(function (K) {
+
+            editor = K.create('#content2', {
+                themeType: 'simple',
+                cssPath: '/static/kindeditor-4.1.10/plugins/code/prettify.css',
+                resizeType: 1,
+				pasteType : 1,
+                uploadJson: 'http://127.0.0.1:8000/uploadImg/',
+				afterBlur:function(){this.sync();}, 
+				items:["image",]
+            });
+            prettyPrint();
+            K('input[name=tijiao]').click(function (e) {
+                document.getElementById("sname").value = editor.html();
+
+            });
+        });
+    </script>
     <title>文章管理器</title>
     <style>
         body{
@@ -71,59 +96,18 @@
                 <td colspan="2"><input type="text" name="intersting" class="form-control" placeholder="intersting" ></td>
             </tr>
             <tr>
-                <td class="td_bg" width="45%" height="26" align="right">头像</td>
-                <td><input type="file" name = "image"  onchange="handleFiles(this)"></td>
+                <td class="td_bg" width="45%" height="26" align="right">头像</td></tr>
+                <tr><td><div>
+						<div>
+							<textarea id="content2" name="content"
+								style="width:10px;height:0px;"></textarea>
+						</div>
+				</div></td>
             </tr>
-                <tr id="fileList" style="width:200px;height:200px;"></tr>
-                <script>
-                    window.URL = window.URL || window.webkitURL;
-                    var fileElem = document.getElementById("fileElem"),
-                            fileList = document.getElementById("fileList");
-                    function handleFiles(obj) {
-                        var files = obj.files,
-                                img = new Image();
-                        if(window.URL){
-                            //File API
-//                            alert(files[0].name + "," + files[0].size + " bytes");
-                            img.src = window.URL.createObjectURL(files[0]); //创建一个object URL，并不是你的本地路径
-                            img.width = 200;
-                            img.onload = function(e) {
-                                window.URL.revokeObjectURL(this.src); //图片加载后，释放object URL
-                            }
-                            fileList.appendChild(img);
-                        }else if(window.FileReader){
-                            //opera不支持createObjectURL/revokeObjectURL方法。我们用FileReader对象来处理
-                            var reader = new FileReader();
-                            reader.readAsDataURL(files[0]);
-                            reader.onload = function(e){
-                                alert(files[0].name + "," +e.total + " bytes");
-                                img.src = this.result;
-                                img.width = 200;
-                                fileList.appendChild(img);
-                            }
-                        }else{
-                            //ie
-                            obj.select();
-                            obj.blur();
-                            var nfile = document.selection.createRange().text;
-                            document.selection.empty();
-                            img.src = nfile;
-                            img.width = 200;
-//                            img.onload=function(){
-//                                alert(nfile+","+img.fileSize + " bytes");
-//                            }
-//                            fileList.appendChild(img);
-                            //fileList.style.filter="progid:DXImageTransform.Microsoft.AlphaImageLoader(sizingMethod='image',src='"+nfile+"')";
-                        }
-                    }
-                </script>
-
             <tr><td>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                <button class="btn btn-sm btn-primary left" type="submit" name="Submit"><strong>&nbsp&nbsp&nbsp&nbsp提交&nbsp&nbsp&nbsp&nbsp</strong></button>
-                <!--<input type="submit" name="Submit" value="提交" ></input>-->
+                <button class="btn btn-sm btn-primary btn-danger right" type="submit" name = "tijiao"><strong>&nbsp&nbsp&nbsp&nbsp提交&nbsp&nbsp&nbsp&nbsp</strong></button>
             </td>
                 <td colspan="2">
-                    <!--<input type="reset" name="Reset" value="重置" /> </td>-->
                     <button class="btn btn-sm btn-primary btn-danger right" type="reset"><strong>&nbsp&nbsp&nbsp&nbsp重置&nbsp&nbsp&nbsp&nbsp</strong></button>
             </tr> </table>
     </form>
