--- a/articleManager/loginORreg/templates/bookHTML.html
+++ b/articleManager/loginORreg/templates/bookHTML.html
@@ -9,6 +9,10 @@
     <!-- Custom styles for this template -->
     <!--<link href="/static/css/style.css" rel="stylesheet">-->
     <title>文章管理器</title>
+	<link rel="stylesheet" href="/static/css/blog.css">
+    <link rel="stylesheet" href="/static/kindeditor-4.1.10/themes/default/default.css"/>
+    <script charset="utf-8" src="/static/kindeditor-4.1.10/kindeditor-min.js"></script>
+    <script charset="utf-8" src="/static/kindeditor-4.1.10//lang/zh_CN.js"></script>
 	<script type="text/javascript" src="/static/js/shCore.js"></script>
     <script type="text/javascript" src="/static/js/shBrushJScript.js"></script>
     <link type="text/css" rel="stylesheet" href="/static/css/shCoreDefault.css"/>
@@ -26,6 +30,28 @@
             });
         });
 
+    </script>
+	<script type="text/javascript">
+        var editor;
+
+        KindEditor.ready(function (K) {
+
+            editor = K.create('#content2', {
+                themeType: 'simple',
+                cssPath: '/static/kindeditor-4.1.10/plugins/code/prettify.css',
+                resizeType: 1,
+				pasteType : 1,
+                uploadJson: 'http://127.0.0.1:8000/uploadImg/',
+				afterBlur:function(){this.sync();}, 
+				items:["formatblock", "fontname", "fontsize"," " ,"|"," ",
+				"bold", "italic", "underline"," " ,"|","code","emoticons","link", "unlink",]
+            });
+            prettyPrint();
+            K('input[name=tijiao]').click(function (e) {
+                document.getElementById("sname").value = editor.html();
+
+            });
+        });
     </script>
     <style type="text/css">
         body{position: relative;
@@ -86,6 +112,11 @@
 			border:1px solid #FFF;
             float:left;/*设置浮动，实现多列效果，div+Css布局中很重要的*/
 
+        }
+		.content-main2{
+            padding-left:300px;
+            width:700px;
+            float:left;/*设置浮动，实现多列效果，div+Css布局中很重要的*/
         }
     </style>
 </head><body style="background: white; font-family: Helvetica">
@@ -161,7 +192,7 @@
                 <a href="/account/bianji/?bj={{ a.id }}"><i class="icon-chevron-right"></i>编辑此文章</a>
             </li>	
             <li class="">
-                <a href="/account/delete/?d_id={{ a.id }}"><i class="icon-chevron-right"></i>删除此文章</a>
+                <a href="/account/delete/?d_id={{ a.id }}" onclick="return confirm('确定删除该文章?')"><i class="icon-chevron-right"></i>删除此文章</a>
             </li>
 	   <li class="">
                 <a href="/account/xiugai/?xiugai={{ a.id }}"><i class="icon-chevron-right"></i>修改文章信息</a>
@@ -180,6 +211,51 @@
 		</div>
     </div>
 </div>
+<div id="commentlist" class="content-main2">
+<lable style="font-size:24px;font-weight:bold;">评论 :</lable>
+        {% if not comments %}
+            <ol id="thecomments">
+                <li  style="font-size:16px;font-weight:bold;color:#CDCDC1;">本文目前尚无任何评论.</li>
+            </ol>
+        {% else %}
+            <ol id="thecomments">
+                {% for comment in comments %}
+                    <li class="comment regularcomment">
+                        <div class="author">
+                            <div class="pic">
+                                <img src="{{comment.owner_favicon}}"
+                                     class="avatar avatar-32 photo" height="32" width="32">
+                            </div>
+                            <div class="name">{{ comment.owner }}：</div>
+                        </div>
+                        <div class="info">
+                            <div class="date">{{ comment.created_time}}</div>
+                            <div class="act"></div>
+                            <div class="fixed"></div>
+                            <div class="content">
+                                <div id="commentbody-3">
+                                    {% autoescape off %}
+										{{ comment.text }}
+									{% endautoescape %}
+                                </div>
+                            </div>
+                        </div>
+                        <div class="fixed"></div>
+                    </li>
+                {% endfor %}
+            </ol>
+        {% endif %}
+        <!-- comments END -->
+        <div class="fixed"></div>
+    
+    <div>
+		<form class="form-submit" name="frm" method="post">
+		<div>
+            <textarea id="content2" name="content"
+                style="width:670px;height:100px;visibility:hidden;"></textarea>
+            <button class="btn-sm btn-primary" type="submit" name = "tijiao">提交</button>
+        </div></form>
+    </div></div>
 <!-- 模态框（Modal） -->
                                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog"
                                      aria-labelledby="myModalLabel" aria-hidden="true">
