--- a/articleManager/loginORreg/templates/site.html
+++ b/articleManager/loginORreg/templates/site.html
@@ -131,7 +131,7 @@
             <tr height="30px">
 			
                 <h1 style="font-size:20px;color:#A2CD5A "><a href="{{l.linkto}}"target="_blank" >·{{ l.Title }}</a>
-				<a href="/account/delete/?l_id={{ l.id }}" style="font-size:8px;color:#FF0000 ">X</a></h1>
+				<a href="/account/delete/?l_id={{ l.id }}" style="font-size:8px;color:#FF0000 "onclick="return confirm('确定删除该收藏网页?')">X</a></h1>
             </tr>
 			{% endfor %}
         </table></div>
