--- a/articleManager/loginORreg/templates/login.html
+++ b/articleManager/loginORreg/templates/login.html
@@ -9,6 +9,7 @@
     <!-- Custom styles for this template -->
     <!--<link href="/static/css/style.css" rel="stylesheet">-->
     <title>Login</title>
+    <link rel="shortcut icon" href="/static/image/article.ico" />
     <link rel = "stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/lrtk.css" />
     <script type="text/javascript" src="/static/js/pptBox.js"></script>
