--- a/articleManager/loginORreg/templates/regist.html
+++ b/articleManager/loginORreg/templates/regist.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <title>文章管理器</title>
+    <link rel="shortcut icon" href="/static/image/article.ico" />
     <link rel = "stylesheet" href="/static/css/bootstrap.min.css">
     <script type="text/javascript" src="/static/js/jquery.js"></script>
 </head>
