--- a/articleManager/loginORreg/templates/add.html
+++ b/articleManager/loginORreg/templates/add.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html">
     <meta name = "viewport" content="width = device-width,initial-scale = 1">
     <title>文章管理器</title>
+    <link rel="shortcut icon" href="/static/image/article.ico" />
     <link rel = "stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css" media="screen" type="text/css" />
     <script src="/static/js/jquery-1.9.1.min.js"></script>
