--- a/articleManager/loginORreg/templates/book.html
+++ b/articleManager/loginORreg/templates/book.html
@@ -9,6 +9,7 @@
     <!-- Custom styles for this template -->
     <!--<link href="/static/css/style.css" rel="stylesheet">-->
     <title>文章管理器</title>
+    <link rel="shortcut icon" href="/static/image/article.ico" />
 	<link rel="stylesheet" href="/static/css/blog.css">
     <link rel="stylesheet" href="/static/kindeditor-4.1.10/themes/default/default.css"/>
     <script charset="utf-8" src="/static/kindeditor-4.1.10/kindeditor-min.js"></script>
@@ -37,7 +38,7 @@
                 cssPath: '/static/kindeditor-4.1.10/plugins/code/prettify.css',
                 resizeType: 1,
 				pasteType : 1,
-                uploadJson: 'http://127.0.0.1:8000/uploadImg/',
+                uploadJson: '/uploadImg/',
 				afterBlur:function(){this.sync();}, 
 				items:["formatblock", "fontname", "fontsize"," " ,"|"," ",
 				"bold", "italic", "underline"," " ,"|","code","emoticons","link", "unlink",]
@@ -114,6 +115,10 @@
             width:700px;
             float:left;/*设置浮动，实现多列效果，div+Css布局中很重要的*/
         }
+        .content-main3{
+            width:500px;
+            float:left;/*设置浮动，实现多列效果，div+Css布局中很重要的*/
+        }
     </style>
 </head>
 <div>
@@ -122,7 +127,7 @@
 
         <div id="navbar" class = "collapse navbar-collapse">
             <ul class = "nav navbar-nav">
-                <li class = "text-right"><a href = "/account/">主页</a></li>
+                <li class = "active text-right"><a href = "/account/">主页</a></li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         我的书单 <span class="caret"></span>
@@ -132,7 +137,7 @@
                         <li><a href="/account/show_root/">按类展示</a></li>
                     </ul>
                 </li>
-                <li class = "text-right"><a href = "#">好友</a></li>
+               
                 <li class = "text-right"><a href = "/account/setting/">设置</a></li>
                 <li class = "text-right"><a href = "/logout/">注销</a></li>
             <li  style="padding-top: 8px;">
@@ -196,12 +201,12 @@
                             <div class="date">{{ comment.created_time}}</div>
                             <div class="act"></div>
                             <div class="fixed"></div>
-                            <div class="content">
-                                <div id="commentbody-3">
+                            <div style="word-break:break-all">
+                                
                                     {% autoescape off %}
-										{{ comment.text }}
+										{{ comment.text|truncatechars:300|linebreaks }}
 									{% endautoescape %}
-                                </div>
+                                
                             </div>
                         </div>
                         <div class="fixed"></div>
