--- a/articleManager/loginORreg/templates/change.html
+++ b/articleManager/loginORreg/templates/change.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html">
     <meta name = "viewport" content="width = device-width,initial-scale = 1">
     <title>Change password</title>
+    <link rel="shortcut icon" href="/static/image/article.ico" />
     <link rel = "stylesheet" href="/static/css/bootstrap.min.css">
     <style>
         body{
