--- a/articleManager/loginORreg/templates/forget.html
+++ b/articleManager/loginORreg/templates/forget.html
@@ -9,6 +9,7 @@
 
     <!-- Custom styles for this template -->
     <title>Forget</title>
+    <link rel="shortcut icon" href="/static/image/article.ico" />
     <link rel = "stylesheet" href="/static/css/bootstrap.min.css">
     <style>
         body{
