--- a/articleManager/loginORreg/templates/in.html
+++ b/articleManager/loginORreg/templates/in.html
@@ -9,6 +9,7 @@
     <!-- Custom styles for this template -->
     <!--<link href="static/css/style.css" rel="stylesheet">-->
     <title>文章管理器</title>
+    <link rel="shortcut icon" href="/static/image/article.ico" />
 	<link rel="stylesheet" href="/static/css/blog.css">
     <link rel="stylesheet" href="/static/kindeditor-4.1.10/themes/default/default.css"/>
     <script charset="utf-8" src="/static/kindeditor-4.1.10/kindeditor-min.js"></script>
@@ -38,7 +39,7 @@
                 cssPath: '/static/kindeditor-4.1.10/plugins/code/prettify.css',
                 resizeType: 1,
 				pasteType : 1,
-                uploadJson: 'http://127.0.0.1:8000/uploadImg/',
+                uploadJson: '/uploadImg/',
 				afterBlur:function(){this.sync();}, 
 				items:["formatblock", "fontname", "fontsize"," " ,"|"," ",
 				"bold", "italic", "underline"," " ,"|","code","emoticons","link", "unlink",]
@@ -114,6 +115,10 @@
             width:700px;
             float:left;/*设置浮动，实现多列效果，div+Css布局中很重要的*/
         }
+        .content-main3{
+            width:500px;
+            float:left;/*设置浮动，实现多列效果，div+Css布局中很重要的*/
+        }
     </style>
 </head>
 <div>
@@ -122,7 +127,7 @@
         
         <div id="navbar" class = "collapse navbar-collapse">
             <ul class = "nav navbar-nav">
-                <li class = "text-right"><a href = "/account/">主页</a></li>
+                <li class = "active text-right"><a href = "/account/">主页</a></li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         我的书单 <span class="caret"></span>
@@ -177,9 +182,7 @@
 <div id="content">
     <div class="content-left">
         <ul data-spy="scroll" data-target=".scrollspy" class="nav nav-list nav bs-docs-sidenav affix-top hidden-xs hidden-sm" style="padding-top: 30px;">
-            <li class="active">
-                <a href="/account/underline/?biaoji_id={{ a.id }}"><i class="icon-chevron-right"></i>标记此文章</a>
-            </li>
+            
             <li class="">
                 <a href="/account/add/"><i class="icon-chevron-right"></i>添加本地文章</a>
             </li>
@@ -227,12 +230,12 @@
                             <div class="date">{{ comment.created_time}}</div>
                             <div class="act"></div>
                             <div class="fixed"></div>
-                            <div class="content">
-                                <div id="commentbody-3">
+                            <div style="word-break:break-all">
+                                
                                     {% autoescape off %}
-										{{ comment.text }}
+										{{ comment.text|truncatechars:300|linebreaks }}
 									{% endautoescape %}
-                                </div>
+                                
                             </div>
                         </div>
                         <div class="fixed"></div>
