--- a/articleManager/loginORreg/templates/showStyle.html
+++ b/articleManager/loginORreg/templates/showStyle.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <link rel="shortcut icon" href="/static/image/article.ico" />
     <link rel="stylesheet" type="text/css" href="/static/css/default.css">
 	
     <link href="http://libs.useso.com/js/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
